--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 196.1.1.154 -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
